samples/_failures_safe/1761651109_9dbc83_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_18924589.c: In function ‘print_analysis’:
./samples/SAFE/__tmp_18924589.c:143:16: error: expected expression at end of input
  143 |                result->longest_word.word,
      |                ^~~~~~
./samples/SAFE/__tmp_18924589.c:143:16: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_18924589.c:143:16: error: expected declaration or statement at end of input
